fix: text-align

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -27,6 +27,7 @@
   align-items: center;
   justify-content: center;
   position: absolute;
+  text-align: center;
   bottom: 0;
   left: 0;
   width: 100%;
